Additional testing and bug fixes
Signed-off-by: Michael Edgar <medgar@redhat.com>